# spawnpoint

./: README.md
cli/: Cargo.toml  README.md
cli/src/: cli.rs  config.rs  error.rs  generate.rs  list.rs  main.rs  utils.rs  validate.rs
cli/templates/java_gradle_cli_v1/: build.gradle  scaffold.yaml  settings.gradle
cli/templates/java_gradle_cli_v1/src/main/java/com/example/__package_name_path__/: __PascalProjectName__.java
cli/templates/java_gradle_cli_v1/src/test/java/com/example/__VAR_packageName__/: __VAR_PascalProjectName__Test.java
cli/templates/java_maven_cli_v1/: pom.xml  scaffold.yaml
cli/templates/java_maven_cli_v1/src/main/java/com/example/__VAR_packageName__/: __VAR_mainClassName__.java
cli/templates/java_maven_cli_v1/src/test/java/com/example/__VAR_packageName__/: __VAR_mainClassName__Test.java
cli/templates/nodejs_base_v1/: Dockerfile  __VAR_mainFileName__.js  docker-compose.yaml  package.json  scaffold.yaml
cli/templates/nodejs_base_v1/scripts/: docker-build.sh
cli/templates/rust_cli_v1/: Cargo.toml  scaffold.yaml
cli/templates/rust_cli_v1/src/: main.rs
cli/templates/rust_leptos_csr_v1/: Cargo.toml  index.html  scaffold.yaml
cli/templates/rust_leptos_csr_v1/src/: lib.rs
cli/templates/rust_leptos_csr_v1/style/: main.css
