[package]
name = "spawn_point"
version = "1.1.0"
edition = "2021"
authors = ["Norm O <normano@gmail.com>"]
description = "A CLI tool for generating project scaffolds from templates with built-in validation."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/normano/spawnpoint"
homepage = "https://github.com/normano/spawnpoint"
keywords = ["cli", "scaffolding", "generator", "template", "validation"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[[bin]]
name = "spawnpoint" # Executable name (no hyphen)
path = "src/main.rs"

[dependencies]
clap = { version = "^4.5", features = ["derive", "env"] }
dialoguer = "^0.11"
directories = "^5.0"
duct = "^0.13"
env_logger = "^0.11"
heck = "^0.5"
indicatif = "^0.17"
log = "^0.4"
regex = { version = "^1.10", optional = true } 
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
tempfile = "^3.10"
thiserror = "^1.0"
walkdir = "^2.5"
# console = "0.15"

[features]
full = ["regex"]
default = ["full"]
regex = ["dep:regex"]