[package]
name = "--crate-name-placeholder--"
version = "0.1.0"
edition = "2021"
description = "--crate-description--"
authors = ["--author-name-- <//--author-email-->"] # Use placeholders

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
# Add other common CLI deps if desired (e.g., anyhow, log, env_logger)